--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,20 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.text {
+  justify-content: center;
+  align-self: center;
+}
+
+.object {
+  justify-content: center;
+  width: 200px;
+}
+
+.container {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
 }
